--- a/blog/templates/base_generic.html
+++ b/blog/templates/base_generic.html
@@ -26,10 +26,34 @@
 						<li>
 							<a href="{% url 'authors' %}">All bloggers</a>
 						</li>
-						<li>
-							<a href="{% url 'admin:index' %}">Admin</a>
-						</li>
 					</ul>
+
+					<ul class="sidebar-nav">
+						{% if user.is_authenticated %}
+							<li>
+								User: {{ user.username }}
+							</li>
+							<li>
+								<a href="{% url 'my-posts' %}">My posts</a>
+							</li>
+							<li>
+								<a href="{% url 'logout' %}">Logout</a>
+							</li>
+						{% else %}
+							<li>
+								<a href="{% url 'login' %}">Login</a>
+							</li>
+						{% endif %}
+					</ul>
+
+					{% if user.is_superuser %}
+						<ul class="sidebar-nav">
+							<li>
+								<a href="{% url 'admin:index' %}">Admin</a>
+							</li>
+						</ul>
+					{% endif %}
+
 				{% endblock %}
 			</div>
 			<div class="col-sm-10">
