post title in comment form

--- a/blog/templates/blog/comment_form.html
+++ b/blog/templates/blog/comment_form.html
@@ -1,9 +1,13 @@
 {% extends "base_generic.html" %}
 
 {% block title %}
+	<title>New comment - Blog</title>
 {% endblock %}
 
 {% block content %}
+	<p>Post your comment for:
+		<a href="{{ post.get_absolute_url }}">{{ post }}</a>
+	</p>
 	<form action="" method="post">
 		{% csrf_token %}
 		<table>
