login to comment

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -33,6 +33,11 @@
 		{% else %}
 			<p>There are no comments.</p>
 		{% endif %}
-		<a href="{% url 'comment-create' post.id %}">Add a new comment</a>
+
+		{% if user.is_authenticated %}
+			<a href="{% url 'comment-create' post.id %}">Add a new comment</a>
+		{% else %}
+			<a href="{% url 'comment-create' post.id %}">Login to comment</a>
+		{% endif %}
 	</div>
 {% endblock %}
